deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agro-backend
  namespace: sebrae-agro
spec:
  replicas: 1
  selector:
    matchLabels:
      name: agro-backend
      tier: backend
  template:
    metadata:
      name: agro-backend
      labels:
        name: agro-backend
        tier: backend
    spec:
      containers:
        - name: agro-backend
          image: docker-hosted.sebrae.com.br/agro-backend:${TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/localtime
              name: tz-config
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /usr/share/zoneinfo/Brazil/East
            type: ""
          name: tz-config
      imagePullSecrets:
        - name: docker-hosted
---
apiVersion: v1
kind: Service
metadata:
  name: agro-backend
  namespace: sebrae-agro
  labels:
    name: agro-backend
    tier: backend
spec:
  ports:
    - name: backend
      port: 8080
      targetPort: 8080
  selector:
    name: agro-backend
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: sebrae-agro
  name: agro-backend
  annotations:
    allow.http: "false"
spec:
  rules:
  - host: homolog-api-sebrae-agro.sebrae.com.br
    http:
      paths:
        - path: /
          backend:
            serviceName: agro-backend
            servicePort: backend
